--- a/apps/xylo/src/index.html
+++ b/apps/xylo/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Xylo</title>
-    <base href="/" />
+    <base href="/dist/apps/xylo" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
